--- a/scrapy/scrapy.cfg
+++ b/scrapy/scrapy.cfg
@@ -2,9 +2,11 @@
 #
 # For more information about the [deploy] section see:
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
+import os
 
 [settings]
 default = myproject.settings
+os.environ.setdefault('DJANGO_SETTINGS_MODULE', 'core.settings')
 
 [deploy]
 #url = http://localhost:6800/
